--- a/.hgignore
+++ b/.hgignore
@@ -21,6 +21,10 @@ target
 /.project
 /.settings
 /RUNNING_PID
-ui/node_modules/
-ui/bower_components/
-ui/.sass-cache/
+ui/node_modules
+ui/dist
+ui/.tmp
+ui/.sass-cache
+ui/bower_components
+*.log
+
