--- a/ui/bower.json
+++ b/ui/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "handsontable": "^0.24.3",
+    "ngHandsontable": "^0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
