--- a/ui/bower.json
+++ b/ui/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "handsontable": "^0.24.3",
-    "ngHandsontable": "^0.10.0"
+    "ngHandsontable": "^0.10.0",
+    "angular-bootstrap": "^1.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
