--- a/ui/bower.json
+++ b/ui/bower.json
@@ -12,7 +12,9 @@
     "angular-touch": "^1.3.0",
     "handsontable": "^0.24.3",
     "ngHandsontable": "^0.10.0",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "lodash": "^4.13.1",
+    "AngularJS-Toaster": "angularjs-toaster#^2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
