--- a/ui/package.json
+++ b/ui/package.json
@@ -36,5 +36,9 @@
   },
   "scripts": {
     "test": "grunt test"
+  },
+  "dependencies": {
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0"
   }
 }
