--- a/ui/bower.json
+++ b/ui/bower.json
@@ -14,7 +14,8 @@
     "ngHandsontable": "^0.10.0",
     "angular-bootstrap": "^1.3.2",
     "lodash": "^4.13.1",
-    "AngularJS-Toaster": "angularjs-toaster#^2.0.0"
+    "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
+    "angular-websocket": "^2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
