--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,18 +21,47 @@
 # ~~~~~
 # Play uses Akka internally and exposes Akka Streams and actors in Websockets and
 # other streaming HTTP responses.
+
 akka {
-  # "akka.log-config-on-start" is extraordinarly useful because it log the complete
-  # configuration at INFO level, including defaults and overrides, so it s worth
-  # putting at the very top.
-  #
-  # Put the following in your conf/logback.xml file:
-  #
-  # <logger name="akka.actor" level="INFO" />
-  #
-  # And then uncomment this line to debug the configuration.
-  #
-  #log-config-on-start = true
+  loglevel = DEBUG
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  actor {
+    provider = "akka.cluster.ClusterActorRefProvider"
+    debug {
+      recieve = on
+      lifcycle = on
+    }
+    serializers {
+      java = "akka.serialization.JavaSerializer"
+    }
+    serialization-bindings {
+      "actors.EventData" = java
+    }
+  }
+
+  remote {
+    enabled-transports = ["akka.remote.netty.tcp"]
+    netty.tcp {
+      hostname = "127.0.0.1"
+    }
+  }
+
+  cluster {
+    seed-nodes = [
+      "akka.tcp://application@127.0.0.1:2551",
+      "akka.tcp://application@127.0.0.1:2552",
+      "akka.tcp://application@127.0.0.1:2553"]
+
+    auto-down-unrechable-after = 10s
+    distributed-data {
+      # Actor name of the Replicator actor, /system/ddataReplicator
+      name = ddataReplicator
+    }
+  }
+
+  akka.extensions = ["akka.cluster.pubsub.DistributedPubSub"]
 }
 
 ## Secret key
