revised .hgignore file

--- a/.hgignore
+++ b/.hgignore
@@ -7,23 +7,17 @@ bin/
 /logs/
 /modules
 /project/target
+/target
 tmp/
 test-result
 server.pid
-*.eml
 /dist/
 .cache
 logs
 target
 .idea
 .idea_modules
-/.classpath
-/.project
-/.settings
+‫/‬.classpath
+‫/‬.project
+‫/‬.settings
 /RUNNING_PID
-ui/node_modules
-ui/dist
-ui/.tmp
-ui/.sass-cache
-ui/bower_components
-*.log
