--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,10 @@
 # https://www.playframework.com/documentation/latest/Configuration
+# Security Filter Configuration - Content Security Policy
+play.filters.headers {
+  contentSecurityPolicy = "default-src 'self';"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src 'self' ;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' ;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' data: ;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' ;"
+  contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ;"
+}
