Removed unused code

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,7 @@ play.filters{
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' data: ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' ;"
-    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ;"
+    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://localhost:9000/spws ;"
   }
 
   csrf {
