new configurations for: 1- allowing application to serve pictures from https. 2- making application deployable to Heroku. 3- add new secret kesy for production

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,14 +3,27 @@
 play.filters{
   headers {
     contentSecurityPolicy = "default-src 'self';"
-    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src 'self' ;"
+    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src * 'self' data: https:;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' data: ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' ;"
-    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://localhost:9000/spws ;"
+    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://semantic-spreadsheets.herokuapp.com/spws ws://localhost:9000/spws ;"
   }
 
   csrf {
 
   }
 }
+
+play.http.secret.key="changeme"
+play.http.secret.key=${?APPLICATION_SECRET}
+play.crypto.secret="changethissosomethingsecret"
+
+
+play.filters.hosts {
+  # Allow requests to herokuapp.com, its subdomains, and localhost:9000.
+  allowed = [".herokuapp.com", "localhost:9000"]
+}
+
+#aws.accessKeyId=
+#aws.secretKey=
