Updated security policy for templating.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,7 +6,7 @@ play.filters{
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src * 'self' data: https:;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' data: ;"
-    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' ;"
+    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' 'unsafe-eval';"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://semantic-spreadsheets.herokuapp.com/spws ws://localhost:9000/spws ;"
   }
 
