--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,7 +7,7 @@ play.filters{
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' data: ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' 'unsafe-eval';"
-    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://semantic-spreadsheets.herokuapp.com/spws ws://localhost:9000/spws ;"
+    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://semantic-spreadsheets.herokuapp.com/spws ws://localhost:9000/spws ws://130.216.216.89/spws;"
   }
 
   csrf {
@@ -22,7 +22,7 @@ play.crypto.secret="changethissosomethingsecret"
 
 play.filters.hosts {
   # Allow requests to herokuapp.com, its subdomains, and localhost:9000.
-  allowed = [".herokuapp.com", "localhost:9000"]
+  allowed = [".herokuapp.com", "localhost:9000", "130.216.216.89"]
 }
 
 #aws.accessKeyId=
