added new DNS host to the list of trusted sources

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,11 +7,10 @@ play.filters{
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' data: ;"
     contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" script-src 'self' 'unsafe-eval';"
-    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://semantic-spreadsheets.herokuapp.com/spws ws://localhost:9000/spws ws://130.216.216.89/spws;"
+    contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src 'self' ws://semantic-spreadsheets.herokuapp.com/spws ws://localhost:9000/spws ws://130.216.216.89/spws ws://semanticspreadsheet.nectar.auckland.ac.nz/spws;"
   }
 
   csrf {
-
   }
 }
 
@@ -21,8 +20,8 @@ play.crypto.secret="changethissosomethingsecret"
 
 
 play.filters.hosts {
-  # Allow requests to herokuapp.com, its subdomains, and localhost:9000.
-  allowed = [".herokuapp.com", "localhost:9000", "130.216.216.89"]
+  # Allow requests from the following hosts.
+  allowed = [".herokuapp.com", "localhost:9000", "130.216.216.89", "semanticspreadsheet.nectar.auckland.ac.nz"]
 }
 
 #aws.accessKeyId=
